Public export of Nexus code:   - f66ca5d5bd8ebe79f0f37d5388d2f4a17c90ad61 by Matthew Piggott <mpiggott@sonatype.com>
GitOrigin-RevId: f66ca5d5bd8ebe79f0f37d5388d2f4a17c90ad61